Random Forest Final

--- a/Random Forest.ipynb
+++ b/Random Forest.ipynb
@@ -120,9 +120,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tenorio/.local/lib/python2.7/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    }
+   ],
    "source": [
     "#!/usr/bin/env python -W ignore::DeprecationWarning\n",
     "\n",
@@ -144,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +232,7 @@
        "4           5.0           3.6           1.4           0.2"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +335,7 @@
        "4           5.0           3.6           1.4           0.2   setosa"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -439,14 +448,14 @@
        "4              True  "
       ]
      },
-     "execution_count": 199,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Se crear la columna De Entrenamiento (asigna 75% de los datos de manera aleatoria)\n",
-    "tabla['De Entrenamiento'] = np.random.uniform(0, 1, len(df)) <= .75\n",
+    "tabla['De Entrenamiento'] = np.random.uniform(0, 1, len(tabla)) <= .75\n",
     "\n",
     "#Muestra las primeras 5 filas\n",
     "tabla.head()"
@@ -454,15 +463,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Numero de observaciones en los datos de entrenamiento:', 109)\n",
-      "('Numero de observaciones en los datos de prueba:', 41)\n"
+      "('Numero de observaciones en los datos de entrenamiento:', 110)\n",
+      "('Numero de observaciones en los datos de prueba:', 40)\n"
      ]
     }
    ],
@@ -477,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -486,14 +495,14 @@
        "Index([u'Sépalo largo', u'Sépalo ancho', u'Pétalo largo', u'Pétalo ancho'], dtype='object')"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Asigna las caracteristicas (primeras 4 colum) a una variables\n",
-    "caracteristicas = df.columns[:4]\n",
+    "caracteristicas = tabla.columns[:4]\n",
     "\n",
     "#Imprime la lista\n",
     "caracteristicas"
@@ -501,20 +510,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
-       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
+       "       1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +551,7 @@
        "            oob_score=False, random_state=0, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,25 +566,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1. , 0. , 0. ],\n",
-       "       [1. , 0. , 0. ],\n",
-       "       [1. , 0. , 0. ],\n",
-       "       [1. , 0. , 0. ],\n",
-       "       [1. , 0. , 0. ],\n",
-       "       [1. , 0. , 0. ],\n",
-       "       [1. , 0. , 0. ],\n",
-       "       [1. , 0. , 0. ],\n",
-       "       [1. , 0. , 0. ],\n",
-       "       [0.9, 0.1, 0. ]])"
+       "array([[1., 0., 0.],\n",
+       "       [1., 0., 0.],\n",
+       "       [1., 0., 0.],\n",
+       "       [1., 0., 0.],\n",
+       "       [1., 0., 0.],\n",
+       "       [1., 0., 0.],\n",
+       "       [1., 0., 0.],\n",
+       "       [1., 0., 0.],\n",
+       "       [1., 0., 0.],\n",
+       "       [1., 0., 0.]])"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,21 +600,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array(['setosa', 'setosa', 'setosa', 'setosa', 'setosa', 'setosa',\n",
-       "       'setosa', 'setosa', 'setosa', 'setosa', 'virginica', 'versicolor',\n",
+       "       'setosa', 'setosa', 'setosa', 'setosa', 'setosa', 'setosa',\n",
+       "       'setosa', 'versicolor', 'versicolor', 'versicolor', 'versicolor',\n",
        "       'versicolor', 'versicolor', 'versicolor', 'versicolor',\n",
-       "       'versicolor', 'versicolor', 'versicolor', 'virginica',\n",
-       "       'versicolor', 'versicolor', 'versicolor', 'versicolor',\n",
-       "       'virginica'], dtype='|S10')"
+       "       'versicolor', 'versicolor', 'virginica', 'versicolor'],\n",
+       "      dtype='|S10')"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,22 +629,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "2     setosa\n",
-       "7     setosa\n",
+       "8     setosa\n",
        "10    setosa\n",
-       "12    setosa\n",
-       "13    setosa\n",
+       "14    setosa\n",
+       "17    setosa\n",
        "Name: Especies, dtype: category\n",
        "Categories (3, object): [setosa, versicolor, virginica]"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -689,21 +698,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>setosa</th>\n",
-       "      <td>10</td>\n",
+       "      <td>13</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>versicolor</th>\n",
        "      <td>0</td>\n",
-       "      <td>19</td>\n",
-       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>virginica</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>8</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -712,12 +721,12 @@
       "text/plain": [
        "Especies Predecidas  setosa  versicolor  virginica\n",
        "Especies Reales                                   \n",
-       "setosa                   10           0          0\n",
-       "versicolor                0          19          3\n",
-       "virginica                 0           1          8"
+       "setosa                   13           0          0\n",
+       "versicolor                0          12          1\n",
+       "virginica                 0           1         13"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,24 +740,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Total datos de prueba:', 41.0)\n",
-      "('Numero de Exitos:', 37)\n"
+      "('Total datos de prueba:', 40.0)\n",
+      "('Numero de Exitos:', 38)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.9024390243902439"
+       "0.95"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,6 +775,13 @@
     "\n",
     "efectividad"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
