Cambios de Título

--- a/Arbol.ipynb
+++ b/Arbol.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  $ÁRBOLES \\ DE \\ DECISIÓN$"
+    "ÁRBOLES DE DECISIÓN"
    ]
   },
   {
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $Características \\ de \\ los \\ árboles \\ de \\ decisión:$"
+    "CARACTERÍSTICAS DE LOS ÁRBOLES DE DECISIÓN"
    ]
   },
   {
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $Estructura \\ de \\ los \\ árboles \\ de \\ decisión:$"
+    "ESTRUCTURA DE LOS ÁRBOLES DE DECISIÓN"
    ]
   },
   {
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $Descripción \\ del \\ algoritmo:$"
+    "DESCRIPCIÓN DEL ALGORITMO"
    ]
   },
   {
@@ -65,7 +65,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### $Entropía$ \n",
+    "ENTROPÍA\n",
+    "\n",
     "Es la medida de la incertidumbre de una variable aleatoria, y se representa por:"
    ]
   },
@@ -82,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### $Ganancia \\ de \\ información$"
+    "GANANCIA DE INFORMACIÓN"
    ]
   },
   {
@@ -114,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### $Explicación: $\n",
+    "EXPLICACIÓN\n",
     "\n",
     "El primer paso para crear un árbol de decisión es obtener la raíz, para lo cual, se calcula la entropía, es decir, se obtienen todas las posibles predicciones y sus probabilidades según el conjunto de datos de entrenamiento, y se aplica la fórmula de la entropía. Por ejemplo, si se tienen 3 predicciones diferentes, como X,F y Z, con probabilidades a,b y c respectivamente, el desarrollo de la fórmula sería:\n",
     "\n",
@@ -135,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### $Imports$"
+    "IMPORTS"
    ]
   },
   {
@@ -153,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### $Nota: \\ usuarios \\ Windows$"
+    "NOTA: USUARIOS DE WINDOWS"
    ]
   },
   {
@@ -171,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### $Clases$"
+    "CLASES"
    ]
   },
   {
@@ -215,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### $Conjunto \\ de \\ entrenamiento$"
+    "CONJUNTO DE ENTRENAMIENTO"
    ]
   },
   {
@@ -246,12 +247,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### $Principal$"
+    "PRINCIPAL"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -420,10 +421,10 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0xd616f0>"
+       "<graphviz.dot.Digraph at 0x16486b0>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# $RANDOM \\ FOREST$"
+    "RANDOM FOREST"
    ]
   },
   {
@@ -570,7 +571,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $Algunos \\ Usos$\n",
+    "ALGUNOS USOS\n",
     "\n",
     "- Teledetección\n",
     "Usado en dispositivos ETM para adquirir imagenes de la superficie terrestre.\n",
@@ -587,7 +588,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $Ventajas$\n",
+    "VENTAJAS\n",
     "\n",
     "- Sin overfitting\n",
     "    - Utilización de múltiples árboles, lo que reduuce el riesgo de overfitting.\n",
@@ -603,7 +604,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $¿Cómo \\ lo \\ hace?$\n",
+    "¿CÓMO LO HACE?\n",
     "\n",
     "Random Decision Forest es un método que opera al crear múltiples árboles de decisión durante la face de entrenamiento.\n",
     "La decisión de la mayoría de árboles es escogida por el Random Forest como decisión final.\n",
@@ -629,14 +630,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $Código$\n",
+    "CÓDIGO\n",
     "\n",
     "A continuación se muestra un código en python, en el cual se implementa una solución para el Algoritmo Random Forest, en este se utiliza un librería llamada scikit, de la cual se toma un banco de datos de lirios, el cual posee el largo y ancho del Sépalo y Pétalo en centimetros de esta especie de flores, de los cuales se puede deducir si el lirio es setosa, versicolor o virginica."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +740,7 @@
        "4           5.0           3.6           1.4           0.2"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +843,7 @@
        "4           5.0           3.6           1.4           0.2   setosa"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +898,7 @@
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
        "      <td>setosa</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -906,7 +907,7 @@
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
        "      <td>setosa</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -924,7 +925,7 @@
        "      <td>1.5</td>\n",
        "      <td>0.2</td>\n",
        "      <td>setosa</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -948,14 +949,14 @@
        "4           5.0           3.6           1.4           0.2   setosa   \n",
        "\n",
        "   De Entrenamiento  \n",
-       "0              True  \n",
-       "1              True  \n",
+       "0             False  \n",
+       "1             False  \n",
        "2              True  \n",
-       "3              True  \n",
+       "3             False  \n",
        "4              True  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,15 +971,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numero de observaciones en los datos de entrenamiento: 111\n",
-      "Numero de observaciones en los datos de prueba: 39\n"
+      "Numero de observaciones en los datos de entrenamiento: 106\n",
+      "Numero de observaciones en los datos de prueba: 44\n"
      ]
     }
    ],
@@ -993,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1003,7 @@
        "Index(['Sépalo largo', 'Sépalo ancho', 'Pétalo largo', 'Pétalo ancho'], dtype='object')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,21 +1018,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
-       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
-       "       2], dtype=int32)"
+       "       1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2], dtype=int32)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1059,7 @@
        "            oob_score=False, random_state=0, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,25 +1074,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.]])"
+       "array([[1. , 0. , 0. ],\n",
+       "       [0.9, 0.1, 0. ],\n",
+       "       [1. , 0. , 0. ],\n",
+       "       [1. , 0. , 0. ],\n",
+       "       [1. , 0. , 0. ],\n",
+       "       [1. , 0. , 0. ],\n",
+       "       [1. , 0. , 0. ],\n",
+       "       [1. , 0. , 0. ],\n",
+       "       [0.9, 0.1, 0. ],\n",
+       "       [1. , 0. , 0. ]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,21 +1108,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array(['setosa', 'setosa', 'setosa', 'setosa', 'setosa', 'setosa',\n",
-       "       'setosa', 'setosa', 'setosa', 'setosa', 'setosa', 'versicolor',\n",
+       "       'setosa', 'setosa', 'setosa', 'setosa', 'setosa', 'setosa',\n",
+       "       'setosa', 'setosa', 'setosa', 'setosa', 'setosa', 'setosa',\n",
        "       'versicolor', 'versicolor', 'versicolor', 'versicolor',\n",
-       "       'versicolor', 'versicolor', 'versicolor', 'versicolor',\n",
-       "       'virginica', 'versicolor', 'versicolor', 'versicolor',\n",
-       "       'versicolor'], dtype='<U10')"
+       "       'versicolor', 'versicolor', 'versicolor'], dtype='<U10')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,22 +1136,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8     setosa\n",
-       "10    setosa\n",
-       "14    setosa\n",
-       "19    setosa\n",
-       "20    setosa\n",
+       "0    setosa\n",
+       "1    setosa\n",
+       "3    setosa\n",
+       "6    setosa\n",
+       "8    setosa\n",
        "Name: Especies, dtype: category\n",
        "Categories (3, object): [setosa, versicolor, virginica]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1168,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1205,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>setosa</th>\n",
-       "      <td>11</td>\n",
+       "      <td>18</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1214,13 +1213,13 @@
        "      <th>versicolor</th>\n",
        "      <td>0</td>\n",
        "      <td>14</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>virginica</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>13</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1229,12 +1228,12 @@
       "text/plain": [
        "Especies Predecidas  setosa  versicolor  virginica\n",
        "Especies Reales                                   \n",
-       "setosa                   11           0          0\n",
-       "versicolor                0          14          1\n",
-       "virginica                 0           0         13"
+       "setosa                   18           0          0\n",
+       "versicolor                0          14          0\n",
+       "virginica                 0           3          9"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1248,24 +1247,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total datos de prueba: 39.0\n",
-      "Numero de Exitos: 38\n"
+      "Total datos de prueba: 44.0\n",
+      "Numero de Exitos: 41\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.9743589743589743"
+       "0.9318181818181818"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
