Correción de ortografía

--- a/Arbol.ipynb
+++ b/Arbol.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -421,10 +421,10 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x16486b0>"
+       "<graphviz.dot.Digraph at 0x1648350>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
        "4           5.0           3.6           1.4           0.2"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
        "4           5.0           3.6           1.4           0.2   setosa"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
        "      <td>setosa</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -907,7 +907,7 @@
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
        "      <td>setosa</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -925,7 +925,7 @@
        "      <td>1.5</td>\n",
        "      <td>0.2</td>\n",
        "      <td>setosa</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -934,7 +934,7 @@
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
        "      <td>setosa</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -949,14 +949,14 @@
        "4           5.0           3.6           1.4           0.2   setosa   \n",
        "\n",
        "   De Entrenamiento  \n",
-       "0             False  \n",
-       "1             False  \n",
+       "0              True  \n",
+       "1              True  \n",
        "2              True  \n",
-       "3             False  \n",
-       "4              True  "
+       "3              True  \n",
+       "4             False  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,15 +971,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numero de observaciones en los datos de entrenamiento: 106\n",
-      "Numero de observaciones en los datos de prueba: 44\n"
+      "Numero de observaciones en los datos de entrenamiento: 111\n",
+      "Numero de observaciones en los datos de prueba: 39\n"
      ]
     }
    ],
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1003,7 @@
        "Index(['Sépalo largo', 'Sépalo ancho', 'Pétalo largo', 'Pétalo ancho'], dtype='object')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,20 +1018,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1,\n",
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
-       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2], dtype=int32)"
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+       "       2], dtype=int32)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1060,7 @@
        "            oob_score=False, random_state=0, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,25 +1075,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[1. , 0. , 0. ],\n",
-       "       [0.9, 0.1, 0. ],\n",
-       "       [1. , 0. , 0. ],\n",
-       "       [1. , 0. , 0. ],\n",
-       "       [1. , 0. , 0. ],\n",
-       "       [1. , 0. , 0. ],\n",
        "       [1. , 0. , 0. ],\n",
        "       [1. , 0. , 0. ],\n",
        "       [0.9, 0.1, 0. ],\n",
-       "       [1. , 0. , 0. ]])"
+       "       [1. , 0. , 0. ],\n",
+       "       [1. , 0. , 0. ],\n",
+       "       [1. , 0. , 0. ],\n",
+       "       [1. , 0. , 0. ],\n",
+       "       [1. , 0. , 0. ],\n",
+       "       [0. , 0.9, 0.1]])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,20 +1109,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array(['setosa', 'setosa', 'setosa', 'setosa', 'setosa', 'setosa',\n",
-       "       'setosa', 'setosa', 'setosa', 'setosa', 'setosa', 'setosa',\n",
-       "       'setosa', 'setosa', 'setosa', 'setosa', 'setosa', 'setosa',\n",
+       "       'setosa', 'setosa', 'setosa', 'versicolor', 'versicolor',\n",
+       "       'versicolor', 'versicolor', 'versicolor', 'virginica',\n",
        "       'versicolor', 'versicolor', 'versicolor', 'versicolor',\n",
-       "       'versicolor', 'versicolor', 'versicolor'], dtype='<U10')"
+       "       'versicolor', 'versicolor', 'versicolor', 'versicolor',\n",
+       "       'versicolor', 'virginica'], dtype='<U10')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,22 +1138,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    setosa\n",
-       "1    setosa\n",
-       "3    setosa\n",
-       "6    setosa\n",
-       "8    setosa\n",
+       "4     setosa\n",
+       "8     setosa\n",
+       "9     setosa\n",
+       "14    setosa\n",
+       "30    setosa\n",
        "Name: Especies, dtype: category\n",
        "Categories (3, object): [setosa, versicolor, virginica]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1207,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>setosa</th>\n",
-       "      <td>18</td>\n",
+       "      <td>9</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1213,13 +1215,13 @@
        "      <th>versicolor</th>\n",
        "      <td>0</td>\n",
        "      <td>14</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>virginica</th>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1228,12 +1230,12 @@
       "text/plain": [
        "Especies Predecidas  setosa  versicolor  virginica\n",
        "Especies Reales                                   \n",
-       "setosa                   18           0          0\n",
-       "versicolor                0          14          0\n",
-       "virginica                 0           3          9"
+       "setosa                    9           0          0\n",
+       "versicolor                0          14          1\n",
+       "virginica                 0           2         13"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,24 +1249,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total datos de prueba: 44.0\n",
-      "Numero de Exitos: 41\n"
+      "Total datos de prueba: 39.0\n",
+      "Numero de Exitos: 36\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.9318181818181818"
+       "0.9230769230769231"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,7 +1289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# $REFERENCIAS$"
+    "REFERENCIAS"
    ]
   },
   {
