--- a/Arbol.ipynb
+++ b/Arbol.ipynb
@@ -159,13 +159,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "### si no se está ejecutando en windows las siguientes lineas deben de estar comentadas\n",
-    "import os\n",
-    "os.environ[\"PATH\"] += os.pathsep + 'C:/Program Files (x86)/Graphviz2.38/bin/'"
+    "#import os\n",
+    "#os.environ[\"PATH\"] += os.pathsep + 'C:/Program Files (x86)/Graphviz2.38/bin/'"
    ]
   },
   {
