--- a/Arbol.ipynb
+++ b/Arbol.ipynb
@@ -619,8 +619,8 @@
     "| . | Árbol 1 | Árbol 2 | Árbol 3 | Random Forest | Elección |\n",
     "| --- | --- | --- | --- | --- | ---|\n",
     "| **Respueta** | Manzana | Naranja | Manzana  | . | . |\n",
-    "| **Manzana** | . | . | . | <font color= blue>**2**</font> | **<--** |\n",
-    "| **Naranja** | . | . | . | <font color= red>1</font> | . |\n",
+    "| **Manzana** | . | . | . | 2 | **<--** |\n",
+    "| **Naranja** | . | . | . | 1 | . |\n",
     "\n",
     "<br><br>\n",
     "Se puede apreciar cómo la respuesta de el Árbol 1 y 3 fue Manzana, a diferencia del 2 que dió como respuesta Naranja, para el parámetro **_X_**, luego el algorítmo Random Forest verifica los output de cada árbol y deduce que la respuesta correcta es aquella que posee mayores ocurrencias entre los árboles, por lo tanto se decide que la respuesta correcta para el prámetro **_X_** es Manzana."
